remove deprecations